--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,3 +1,9 @@
-indent_type = "Spaces"
-indent_width = 2
-column_width = 120
+call_parentheses          = "always"
+collapse_simple_statement = "never"
+column_width              = 120
+indent_type               = "Spaces"
+indent_width              = 4
+quote_style               = "AutoPreferDouble"
+
+[sort_requires]
+enabled = true
